# autorouter

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  autorouter.service  build.md  manual.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
crates/autorouter-app/: Cargo.toml
crates/autorouter-app/src/: main.rs  tui.rs
crates/autorouter-config/: Cargo.toml
crates/autorouter-config/src/: api_key.rs  error.rs  lib.rs  loader.rs  model.rs  paths.rs  secret.rs  storage.rs
crates/autorouter-config/tests/: loader.rs  paths.rs  secrets.rs  storage.rs
crates/autorouter-core/: Cargo.toml
crates/autorouter-core/src/: error.rs  ids.rs  lib.rs  message.rs  model.rs  request.rs  response.rs  streaming.rs  tool.rs  usage.rs
crates/autorouter-core/tests/: universal_schema.rs
crates/autorouter-desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/autorouter-desktop/capabilities/: default.json
crates/autorouter-desktop/icons/: icon.icns
crates/autorouter-desktop/info/: Info.plist  entitlements.plist
crates/autorouter-desktop/src/: lib.rs  main.rs
crates/autorouter-observability/: Cargo.toml
crates/autorouter-observability/benches/: translate.rs
crates/autorouter-observability/src/: error.rs  lib.rs  logging.rs  metrics.rs  recovery.rs
crates/autorouter-observability/tests/: logging.rs  metrics.rs  recovery.rs
crates/autorouter-router/: Cargo.toml
crates/autorouter-router/src/: decision.rs  engine.rs  error.rs  health.rs  lib.rs  model.rs
crates/autorouter-router/tests/: health.rs  rules.rs  smart_router.rs
crates/autorouter-server/: Cargo.toml
crates/autorouter-server/src/: error.rs  lib.rs  log_bridge.rs  model_db.rs  router.rs  routes.rs  session.rs  state.rs  static_ui.rs  storage.rs  supervisor.rs  ui.rs  upstream.rs
crates/autorouter-server/tests/: analytics_pipeline.rs  api_key_classify.rs  auto_route_custom.rs  cross_format.rs  gateway.rs  openrouter_real.rs  providers_endpoint.rs  storage_e2e.rs  supervisor.rs  ui_api.rs  upstream_rebuild.rs
crates/autorouter-translate/: Cargo.toml
crates/autorouter-translate/src/: anthropic.rs  codex_harness_prompt.md  error.rs  gemini.rs  lib.rs  openai_chat.rs  openai_responses.rs  pipeline.rs  reasoning_extractor.rs  streaming.rs  traits.rs
crates/autorouter-translate/tests/: anthropic.rs  gemini.rs  openai_chat.rs  openai_responses.rs  pipeline.rs
data/: config.toml  system-prompt-codex-adapted.md  system-prompt-codex.md
docs/: architecture.md
docs/releases/: v0.1.0.md  v0.1.1.md
memories/session/: routing-page-v2-ui.md
scripts/: bundle.mjs  gen-app-icon.mjs  gen-ico-icns.js  gen-png.js  gen-theme-icons.mjs  package-lock.json  package.json  rebuild.js  test_bundle.mjs  ui_e2e.mjs  ui_e2e_v2.mjs
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  api.ts  tauri.ts  types.ts
ui/src/components/: CodeBlock.tsx  CopyButton.tsx  ErrorBoundary.tsx  Icons.tsx  Switcher.tsx  Toast.tsx
ui/src/pages/: Analytics.tsx  Dashboard.tsx  Debug.tsx  GettingStarted.tsx  Health.tsx  ImportExport.tsx  Logs.tsx  Models.tsx  Onboarding.tsx  Providers.tsx  Requests.tsx  Routing.tsx  Sessions.tsx  Settings.tsx  ToolProfiles.tsx  Update.tsx
ui/src/styles/: global.css
