[workspace]
resolver = "2"
members = [
    "crates/autorouter-core",
    "crates/autorouter-translate",
    "crates/autorouter-config",
    "crates/autorouter-server",
    "crates/autorouter-router",
    "crates/autorouter-observability",
    "crates/autorouter-app",
    "crates/autorouter-desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "http2", "json", "tokio"] }
hyper = { version = "1.4", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout", "limit", "load-shed"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util", "limit", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_bytes = "0.11"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
config = { version = "0.14", default-features = false, features = ["toml"] }
base64 = "0.22"
percent-encoding = "2.3"
url = "2.5"
mime = "0.3"
once_cell = "1.20"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
mockall = "0.13"
prometheus = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
parking_lot = "0.12"
socket2 = { version = "0.5", features = ["all"] }
regex = "1.10"
subtle = "2.6"


[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
