[package]
name = "autorouter-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration, persistence, and secret management for AutoRouter."

[dependencies]
autorouter-core = { path = "../autorouter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = "5"
keyring = { version = "3", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
