[package]
name = "autorouter-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Provider-neutral universal schema and core types for AutoRouter."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

