[package]
name = "autorouter-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Smart routing engine for AutoRouter: rules, health, capabilities."

[dependencies]
autorouter-core = { path = "../autorouter-core" }
autorouter-translate = { path = "../autorouter-translate" }
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
