[package]
name = "autorouter-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local HTTP gateway that emulates provider APIs and routes to upstream providers."

[dependencies]
autorouter-core = { path = "../autorouter-core" }
autorouter-translate = { path = "../autorouter-translate" }
autorouter-config = { path = "../autorouter-config" }
autorouter-router = { path = "../autorouter-router" }
autorouter-observability = { path = "../autorouter-observability" }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
parking_lot = "0.12"
toml = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
