[package]
name = "autorouter-translate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Provider-specific parsers and serializers translating between OpenAI, Anthropic, Gemini and the universal schema."

[dependencies]
autorouter-core = { path = "../autorouter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
